--- a/force-app/main/default/classes/ControladorCrearCaso.cls
+++ b/force-app/main/default/classes/ControladorCrearCaso.cls
@@ -37,13 +37,17 @@ public without sharing class ControladorCrearCaso {
     
     @AuraEnabled
     public static ListCasos getCasos(){
-        ListCasos lista = new ListCasos ();
         user usuario = [Select ContactId, Contact.AccountId from User  Where Id = :userInfo.getUserId()];
+        return queyCasos(usuario.Contact.AccountId);
+    }
+    
+    public static ListCasos queyCasos(Id recordId){
+        ListCasos lista = new ListCasos ();
         lista.casosAbiertos = new List<Case>();
         lista.casosCerrados = new List<Case>();
         lista.casosMostrados = new List<Case>();
         DateTime hoy = DateTime.now().addDays(-5);
-        for(Case item: DataBase.query(getQueryCaso() + ' Where AccountId = \'' + usuario.Contact.AccountId + '\'  and FS_OrigenCaso__c = \'Web\' order By CreatedDate desc ')){
+        for(Case item: DataBase.query(getQueryCaso() + ' Where AccountId = \'' + recordId + '\'  and FS_OrigenCaso__c = \'Web\' order By CreatedDate desc ')){
             item.FS_DescripcionCLiente__c = String.isNotBlank(item.FS_DescripcionCLiente__c) ? item.FS_DescripcionCLiente__c : '';
             item.FS_DescripcionCLiente__c = item.FS_DescripcionCLiente__c.stripHtmlTags();
             item.Status = item.FS_SubEstado__c == 'En Espera de Respuesta del Cliente' ? 'Pendiente Respuesta' : item.Status;
