--- a/force-app/main/default/classes/FeedCommentTriggerHelper_Test.cls
+++ b/force-app/main/default/classes/FeedCommentTriggerHelper_Test.cls
@@ -5,24 +5,31 @@ public class FeedCommentTriggerHelper_Test {
     static void setup(){
         Account acc = DataFactory.insertAccount();
         Contact cont = DataFactory.insertContact(acc);
-        FS_ProductoAdquirido__c p = DataFactory.insertProduct(acc, 'FISA System', 'CLIENTES', 'Clientes');
+        FS_ProductoAdquirido__c p = DataFactory.insertProduct(acc, 'FISA System', 'Núcleo del Sistema', '');
         DataFactory.insertCase(acc, cont, p, 'FS_Consulta');
         DataFactory.insertCase(acc, cont, p, 'FS_Solicitud');
         DataFactory.insertCase(acc, cont, p, 'FS_Incidente');
-        DataFactory.insertProduct(acc, 'FISA System', 'CLIENTES', 'Facturas');
+        DataFactory.insertProduct(acc, 'FISA System', 'Núcleo del Sistema', '');
     }
     
     @isTest
     static void FeedComment() {
         User u = [Select Id from User Where Profile.Name = 'Customer Community User' limit 1];
-        Case caso =  [Select Id, RecordType.DeveloperName from Case Where RecordTypeId = :CaseTriggerHelper.CONSULTA_TIPO_REGISTRO];
+        Case caso =  [Select Id, RecordType.DeveloperName, FS_SubEstadoQueSePideInformacion__c, FS_SubEstado__c from Case Where RecordTypeId = :CaseTriggerHelper.CONSULTA_TIPO_REGISTRO];
+        caso.FS_SubEstado__c = 'Apertura de caso';
+        caso.FS_SubEstadoQueSePideInformacion__c = caso.FS_SubEstado__c;
+        update caso;
         Test.startTest();
         caso.FS_InformacionCompleta__c = 'No';
         update caso;
         System.runAs(u){
             FeedItem fi = new FeedItem(ParentId = caso.Id, Body = 'Test', Visibility = 'AllUsers');
             insert fi;
-            insert new FeedComment (FeedItemId = fi.Id, CommentBody = fi.Body);
+            FeedComment df = new FeedComment (FeedItemId = fi.Id, CommentBody = fi.Body);
+            insert df;
+            Database.delete(df, false);
+            Database.delete(fi, false);
+            
         }
         Test.stopTest();
         
