--- a/force-app/main/default/classes/JobValidacionRespuesta_Test.cls
+++ b/force-app/main/default/classes/JobValidacionRespuesta_Test.cls
@@ -6,11 +6,11 @@ public class JobValidacionRespuesta_Test {
     static void setup(){
         Account acc = DataFactory.insertAccount();
         Contact cont = DataFactory.insertContact(acc);
-        FS_ProductoAdquirido__c p = DataFactory.insertProduct(acc, 'FISA System', 'CLIENTES', 'Clientes');
+        FS_ProductoAdquirido__c p = DataFactory.insertProduct(acc, 'FISA System', 'Núcleo del Sistema', '');
         DataFactory.insertCase(acc, cont, p, 'FS_Consulta');
         DataFactory.insertCase(acc, cont, p, 'FS_Solicitud');
         DataFactory.insertCase(acc, cont, p, 'FS_Incidente');
-        DataFactory.insertProduct(acc, 'FISA System', 'CLIENTES', 'Facturas');
+        DataFactory.insertProduct(acc, 'FISA System', 'Núcleo del Sistema', '');
     }
     
     @isTest
@@ -22,6 +22,10 @@ public class JobValidacionRespuesta_Test {
         new JobValidacionRespuesta().execute(null);
         caso.FS_SubEstado__c = 'Respuesta aceptada';
         caso.FS_FechaEnvioEncuesta__c = DateTime.now();
+        update caso;
+        new JobValidacionRespuesta().execute(null);
+        caso =  [Select Id, RecordType.DeveloperName from Case Where RecordTypeId = :CaseTriggerHelper.INCIDENTE_TIPO_REGISTRO];
+        caso.FS_SubEstado__c = 'Paso a Producción';
         update caso;
         new JobValidacionRespuesta().execute(null);
         Test.stopTest();
