--- a/force-app/main/default/classes/TrabajoAgenteHelper_Test.cls
+++ b/force-app/main/default/classes/TrabajoAgenteHelper_Test.cls
@@ -5,11 +5,11 @@ public class TrabajoAgenteHelper_Test {
     static void setup(){
         Account acc = DataFactory.insertAccount();
         Contact cont = DataFactory.insertContact(acc);
-        FS_ProductoAdquirido__c p = DataFactory.insertProduct(acc, 'FISA System', 'CLIENTES', 'Clientes');
+        FS_ProductoAdquirido__c p = DataFactory.insertProduct(acc, 'FISA System', 'Núcleo del Sistema', '');
         DataFactory.insertCase(acc, cont, p, 'FS_Consulta');
         DataFactory.insertCase(acc, cont, p, 'FS_Solicitud');
         DataFactory.insertCase(acc, cont, p, 'FS_Incidente');
-        DataFactory.insertProduct(acc, 'FISA System', 'CLIENTES', 'Facturas');
+        DataFactory.insertProduct(acc, 'FISA System', 'Núcleo del Sistema', '');
     }
     
     @isTest
@@ -21,6 +21,15 @@ public class TrabajoAgenteHelper_Test {
         //ServicePresenceStatus sta = [Select Id from ServicePresenceStatus where DeveloperName = 'Available_Case' limit 1];
         //insert new UserServicePresence(UserId =  UserInfo.getUserId(), ServicePresenceStatusId = sta.Id);
         insert new AgentWork(ServiceChannelId = canal.Id, WorkItemId = caso.Id, UserId = UserInfo.getUserId());
+        
+        caso =  [Select Id, OwnerId,FS_OrigenCaso__c, FS_NombreTipoRegistro__c, CaseNumber from Case Where RecordTypeId = :CaseTriggerHelper.INCIDENTE_TIPO_REGISTRO];
+        caso.FS_SubEstado__c = 'Apertura de caso';
+        TrabajoAgenteHelper.asignarCaso(caso);
+        caso.FS_SubEstado__c = 'Escalado a N2';
+        TrabajoAgenteHelper.asignarCaso(caso);
+        caso.FS_SubEstado__c = 'Escalado a QA';
+        TrabajoAgenteHelper.asignarCaso(caso);
+        //update caso;
     }
 
 }
